odata-parser-generated.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = "&",
      peg$c1 = peg$literalExpectation("&", false),
      peg$c2 = function(parts) {
          const result = {};
          if (parts) {
            const [first, rest] = parts;
            result[first.key] = first.value;
            
            if (rest) {
              for (const [, part] of rest) {
                result[part.key] = part.value;
              }
            }
          }
          return result;
        },
      peg$c3 = "$select=",
      peg$c4 = peg$literalExpectation("$select=", false),
      peg$c5 = function(fields) { return { key: '$select', value: fields }; },
      peg$c6 = "$top=",
      peg$c7 = peg$literalExpectation("$top=", false),
      peg$c8 = function(value) { return { key: '$top', value: value }; },
      peg$c9 = "$skip=",
      peg$c10 = peg$literalExpectation("$skip=", false),
      peg$c11 = function(value) { return { key: '$skip', value: value }; },
      peg$c12 = "$orderby=",
      peg$c13 = peg$literalExpectation("$orderby=", false),
      peg$c14 = function(items) { return { key: '$orderby', value: items }; },
      peg$c15 = "$filter=",
      peg$c16 = peg$literalExpectation("$filter=", false),
      peg$c17 = function(expr) { return { key: '$filter', value: expr }; },
      peg$c18 = "$expand=",
      peg$c19 = peg$literalExpectation("$expand=", false),
      peg$c20 = function(fields) { return { key: '$expand', value: fields }; },
      peg$c21 = "$format=",
      peg$c22 = peg$literalExpectation("$format=", false),
      peg$c23 = function(format) { return { key: '$format', value: format }; },
      peg$c24 = ",",
      peg$c25 = peg$literalExpectation(",", false),
      peg$c26 = function(first, rest) {
          const fields = [first];
          if (rest) {
            for (const [, field] of rest) {
              fields.push(field);
            }
          }
          return fields;
        },
      peg$c27 = "/",
      peg$c28 = peg$literalExpectation("/", false),
      peg$c29 = function(first, rest) {
          if (rest.length === 0) return first;
          
          let result = first;
          for (const [, field] of rest) {
            result += '/' + field;
          }
          return result;
        },
      peg$c30 = function(first, rest) {
          const items = [first];
          if (rest) {
            for (const [, item] of rest) {
              items.push(item);
            }
          }
          return items;
        },
      peg$c31 = " ",
      peg$c32 = peg$literalExpectation(" ", false),
      peg$c33 = "asc",
      peg$c34 = peg$literalExpectation("asc", false),
      peg$c35 = "desc",
      peg$c36 = peg$literalExpectation("desc", false),
      peg$c37 = function(field, direction) {
          const result = {};
          result[field] = direction ? direction[1] : 'asc';
          return result;
        },
      peg$c38 = " or ",
      peg$c39 = peg$literalExpectation(" or ", false),
      peg$c40 = function(left, right) {
          if (right.length === 0) return left;
          
          let result = left;
          for (const [, expr] of right) {
            result = {
              type: 'or',
              left: result,
              right: expr
            };
          }
          return result;
        },
      peg$c41 = " and ",
      peg$c42 = peg$literalExpectation(" and ", false),
      peg$c43 = function(left, right) {
          if (right.length === 0) return left;
          
          let result = left;
          for (const [, expr] of right) {
            result = {
              type: 'and',
              left: result,
              right: expr
            };
          }
          return result;
        },
      peg$c44 = "not",
      peg$c45 = peg$literalExpectation("not", false),
      peg$c46 = function(expr) {
          return {
            type: 'not',
            left: expr
          };
        },
      peg$c47 = "(",
      peg$c48 = peg$literalExpectation("(", false),
      peg$c49 = ")",
      peg$c50 = peg$literalExpectation(")", false),
      peg$c51 = function(expr) { return expr; },
      peg$c52 = "substringof",
      peg$c53 = peg$literalExpectation("substringof", false),
      peg$c54 = "startswith",
      peg$c55 = peg$literalExpectation("startswith", false),
      peg$c56 = "endswith",
      peg$c57 = peg$literalExpectation("endswith", false),
      peg$c58 = function(func, args) {
          return {
            type: 'functioncall',
            func: func,
            args: args
          };
        },
      peg$c59 = function(left, op, right) {
          const leftNode = typeof left === 'string' 
            ? { type: 'property', name: left }
            : left;
            
          const rightNode = typeof right === 'string'
            ? { type: 'property', name: right }
            : (right.type ? right : { type: 'literal', value: right });
          
          return {
            type: op,
            left: leftNode,
            right: rightNode
          };
        },
      peg$c60 = function(entity, property) {
          return {
            type: 'pathProperty',
            entity: entity,
            property: property
          };
        },
      peg$c61 = "any",
      peg$c62 = peg$literalExpectation("any", true),
      peg$c63 = "all",
      peg$c64 = peg$literalExpectation("all", true),
      peg$c65 = ":",
      peg$c66 = peg$literalExpectation(":", false),
      peg$c67 = function(path, operator, variable, condition) {
          return {
            type: 'lambda',
            operator: operator,
            path: path,
            variable: variable,
            condition: condition
          };
        },
      peg$c68 = function(func, args) {
          // Handle functions that return boolean (like substringof, startswith, endswith)
          if (['substringof', 'startswith', 'endswith'].includes(func)) {
            return {
              type: 'functioncall',
              func: func,
              args: args
            };
          }
          
          // Other functions return values and need to be used in comparisons
          return {
            type: 'functioncall',
            func: func,
            args: args,
            name: args.length > 0 && args[0].type === 'property' ? args[0].name : null
          };
        },
      peg$c69 = "tolower",
      peg$c70 = peg$literalExpectation("tolower", false),
      peg$c71 = "toupper",
      peg$c72 = peg$literalExpectation("toupper", false),
      peg$c73 = "trim",
      peg$c74 = peg$literalExpectation("trim", false),
      peg$c75 = "concat",
      peg$c76 = peg$literalExpectation("concat", false),
      peg$c77 = "substring",
      peg$c78 = peg$literalExpectation("substring", false),
      peg$c79 = "replace",
      peg$c80 = peg$literalExpectation("replace", false),
      peg$c81 = "indexof",
      peg$c82 = peg$literalExpectation("indexof", false),
      peg$c83 = "length",
      peg$c84 = peg$literalExpectation("length", false),
      peg$c85 = "year",
      peg$c86 = peg$literalExpectation("year", false),
      peg$c87 = "month",
      peg$c88 = peg$literalExpectation("month", false),
      peg$c89 = "day",
      peg$c90 = peg$literalExpectation("day", false),
      peg$c91 = "hour",
      peg$c92 = peg$literalExpectation("hour", false),
      peg$c93 = "minute",
      peg$c94 = peg$literalExpectation("minute", false),
      peg$c95 = "second",
      peg$c96 = peg$literalExpectation("second", false),
      peg$c97 = function(first, rest) {
          const args = [first];
          if (rest) {
            for (const [, , arg] of rest) {
              args.push(arg);
            }
          }
          return args;
        },
      peg$c98 = "eq",
      peg$c99 = peg$literalExpectation("eq", false),
      peg$c100 = "ne",
      peg$c101 = peg$literalExpectation("ne", false),
      peg$c102 = "gt",
      peg$c103 = peg$literalExpectation("gt", false),
      peg$c104 = "ge",
      peg$c105 = peg$literalExpectation("ge", false),
      peg$c106 = "lt",
      peg$c107 = peg$literalExpectation("lt", false),
      peg$c108 = "le",
      peg$c109 = peg$literalExpectation("le", false),
      peg$c110 = "'",
      peg$c111 = peg$literalExpectation("'", false),
      peg$c112 = function(chars) { return { type: 'literal', value: chars.join('') }; },
      peg$c113 = /^[^']/,
      peg$c114 = peg$classExpectation(["'"], true, false),
      peg$c115 = "''",
      peg$c116 = peg$literalExpectation("''", false),
      peg$c117 = function() { return "'"; },
      peg$c118 = "datetime'",
      peg$c119 = peg$literalExpectation("datetime'", false),
      peg$c120 = function(date) { return { type: 'literal', value: new Date(date) }; },
      peg$c121 = /^[0-9T:\-.Z]/,
      peg$c122 = peg$classExpectation([["0", "9"], "T", ":", "-", ".", "Z"], false, false),
      peg$c123 = function(chars) { return chars.join(''); },
      peg$c124 = /^[0-9]/,
      peg$c125 = peg$classExpectation([["0", "9"]], false, false),
      peg$c126 = ".",
      peg$c127 = peg$literalExpectation(".", false),
      peg$c128 = function(digits, decimal) {
          const intPart = digits.join('');
          if (decimal) {
            return parseFloat(intPart + '.' + decimal[1].join(''));
          }
          return parseInt(intPart, 10);
        },
      peg$c129 = "true",
      peg$c130 = peg$literalExpectation("true", false),
      peg$c131 = function() { return true; },
      peg$c132 = "false",
      peg$c133 = peg$literalExpectation("false", false),
      peg$c134 = function() { return false; },
      peg$c135 = /^[a-zA-Z_]/,
      peg$c136 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false),
      peg$c137 = /^[a-zA-Z0-9_]/,
      peg$c138 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false),
      peg$c139 = function(first, rest) { return first + rest.join(''); },
      peg$c140 = function(digits) { return parseInt(digits.join(''), 10); },
      peg$c141 = /^[ \t\n\r]/,
      peg$c142 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0;

    s0 = peg$parsequery();

    return s0;
  }

  function peg$parsequery() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$currPos;
    s2 = peg$parsequeryPart();
    if (s2 !== peg$FAILED) {
      s3 = [];
      s4 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 38) {
        s5 = peg$c0;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c1); }
      }
      if (s5 !== peg$FAILED) {
        s6 = peg$parsequeryPart();
        if (s6 !== peg$FAILED) {
          s5 = [s5, s6];
          s4 = s5;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 38) {
          s5 = peg$c0;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c1); }
        }
        if (s5 !== peg$FAILED) {
          s6 = peg$parsequeryPart();
          if (s6 !== peg$FAILED) {
            s5 = [s5, s6];
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
      }
      if (s3 !== peg$FAILED) {
        s2 = [s2, s3];
        s1 = s2;
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
    } else {
      peg$currPos = s1;
      s1 = peg$FAILED;
    }
    if (s1 === peg$FAILED) {
      s1 = null;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c2(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsequeryPart() {
    var s0;

    s0 = peg$parseselect();
    if (s0 === peg$FAILED) {
      s0 = peg$parsetop();
      if (s0 === peg$FAILED) {
        s0 = peg$parseskip();
        if (s0 === peg$FAILED) {
          s0 = peg$parseorderby();
          if (s0 === peg$FAILED) {
            s0 = peg$parsefilter();
            if (s0 === peg$FAILED) {
              s0 = peg$parseexpand();
              if (s0 === peg$FAILED) {
                s0 = peg$parseformat();
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseselect() {
    var s0, s1, s2;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 8) === peg$c3) {
      s1 = peg$c3;
      peg$currPos += 8;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c4); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseselectFieldList();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c5(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsetop() {
    var s0, s1, s2;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c6) {
      s1 = peg$c6;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseinteger();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c8(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseskip() {
    var s0, s1, s2;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 6) === peg$c9) {
      s1 = peg$c9;
      peg$currPos += 6;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c10); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseinteger();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c11(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseorderby() {
    var s0, s1, s2;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 9) === peg$c12) {
      s1 = peg$c12;
      peg$currPos += 9;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c13); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseorderByList();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c14(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsefilter() {
    var s0, s1, s2;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 8) === peg$c15) {
      s1 = peg$c15;
      peg$currPos += 8;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c16); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseorExpression();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c17(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseexpand() {
    var s0, s1, s2;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 8) === peg$c18) {
      s1 = peg$c18;
      peg$currPos += 8;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c19); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseexpandFieldList();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c20(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseformat() {
    var s0, s1, s2;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 8) === peg$c21) {
      s1 = peg$c21;
      peg$currPos += 8;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c22); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseidentifier();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c23(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseselectFieldList() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseidentifier();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 44) {
        s4 = peg$c24;
        peg$currPos++;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c25); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parseidentifier();
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 44) {
          s4 = peg$c24;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c25); }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parseidentifier();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c26(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseexpandFieldList() {
    var s0, s1, s2, s3, s4, s5;
